# configure

./: CMakeLists.txt  README.md  README.rst
cmake/: FindLibXml2.cmake  FindZLIB.cmake
